added AC Milan Game

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>Manchester City vs Norwich City</h1>
+  <h1>AC Milan vs Hellas Verona</h1>
   <div id="popup" class="popup">
     <div class="popup-content">
         <img src="7nvo3h.gif" alt="GIF">
