--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 <body>
   <h1>AC Milan vs Hellas Verona</h1>
   <div id="popup" class="popup">
-    <div class="popup-content">
+    <!-- <div class="popup-content">
         <img src="7nvo3h.gif" alt="GIF">
         <button id="closeButton">Close</button>
-    </div>
-  </div>
+    </div> -->
+  <!-- </div>
   <div id="sliderContainer" class="filters delay">
     <label for="delaySlider">Delay:</label>
     <input class="filters" type="range" id="delaySlider" min="100" max="2000" step="10">
     <span id="delayLabel"></span>
-  </div>
+  </div> -->
     <table id="field" class="field"></table>
-    <h1 id="startTimeDisplay"></h1>
+    <!-- <h1 id="startTimeDisplay"></h1> -->
     <h1 id="timestampDisplay"></h1>
+    <h1 id="eventDisplay"></h1>
     <script src="./events.js"></script>
 </body>
 </html>
